# wagh

./: CMakeLists.txt
include/wagh/: byte.hpp  decoding_error.hpp  element_type.hpp  exception.hpp  float32.hpp  float64.hpp  function.hpp  function_type.hpp  instruction.hpp  instruction_iterator.hpp  int32.hpp  int64.hpp  limits.hpp  memory_type.hpp  module.hpp  skip_varuint32.hpp  table_type.hpp  uint32.hpp  uint64.hpp  value_type.hpp  version.hpp.in
include/wagh/detail/: allocator_user.hpp  api.hpp  os.hpp  version_namespace.hpp
include/wagh/detail/pp/: join.hpp
include/wagh/instructions/: block.hpp  nop.hpp  unreachable.hpp
src/: decoding_error.cpp  exception.cpp  instruction_iterator.cpp
